@@ -3,15 +3,14 @@ package ru.iav.takoe.countee.crypt.impl;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import javax.annotation.ParametersAreNonnullByDefault;
-import javax.xml.bind.DatatypeConverter;
 
 import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.lang3.StringUtils;
 
-import static ru.iav.takoe.countee.utils.ObjectUtils.isNull;
-
 @ParametersAreNonnullByDefault
 class SimpleGostEncryptor extends SimpleGostAlgorithmExecutor implements Encryptor {
+
+    private static final int SPACE_BYTE_LEN = " ".getBytes().length;
 
     public static SimpleGostEncryptor withKey(String key) {
         return new SimpleGostEncryptor(key);
@@ -32,23 +31,21 @@ class SimpleGostEncryptor extends SimpleGostAlgorithmExecutor implements Encrypt
     @Override
     @Nonnull
     public String encrypt(@Nullable String text) {
-        if (isNull(text)) {
+        if (text == null) {
             return StringUtils.EMPTY;
         }
-        text = appendSpacesToFillLastBlock(text);
-        byte[] resultBytes = SimpleGostAlgorithm.newEncryptor(text, key).execute();
-        if (true) {
-            return new String(Base64.encodeBase64(resultBytes));        // Android compatible
-        } else {
-            return DatatypeConverter.printBase64Binary(resultBytes);
-        }
+        String paddedText = bytesPadding(text);
+        byte[] resultBytes = SimpleGostAlgorithm.newEncryptor(paddedText, key).execute();
+        return new String(Base64.encodeBase64(resultBytes));
     }
 
-    private String appendSpacesToFillLastBlock(String s) {
-        while (s.getBytes().length % 8 != 0) {
-            s += " ";
+    private String bytesPadding(String s) {
+        int len = s.getBytes().length;
+        if (len % 8 == 0) {
+            return s;
         }
-        return s;
+        int spaces = (8 - (len % 8)) / SPACE_BYTE_LEN;
+        return StringUtils.rightPad(s, s.length() + spaces, ' ');
     }
 
 }
